// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressSteps > snapshots > matches snapshot for config step 1`] = `
<div
  class="progress-steps flex items-center justify-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="true"
      data-completed="false"
      data-testid="progress-step-config"
    >
      <div
        class="flex flex-col items-center"
        data-active="true"
        data-completed="false"
        data-testid="workflow-step-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
        >
          1
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-primary"
        >
          Config
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-muted"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="false"
      data-testid="progress-step-ensemble"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="false"
        data-testid="workflow-step-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
        >
          2
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-muted-foreground"
        >
          Ensemble
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-muted"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="false"
      data-testid="progress-step-prompt"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="false"
        data-testid="workflow-step-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
        >
          3
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-muted-foreground"
        >
          Prompt
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-muted"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="false"
      data-testid="progress-step-review"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="false"
        data-testid="workflow-step-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
        >
          4
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-muted-foreground"
        >
          Review
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps > snapshots > matches snapshot for ensemble step 1`] = `
<div
  class="progress-steps flex items-center justify-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="true"
      data-testid="progress-step-config"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="true"
        data-testid="workflow-step-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-success"
        >
          Config
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-success"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="true"
      data-completed="false"
      data-testid="progress-step-ensemble"
    >
      <div
        class="flex flex-col items-center"
        data-active="true"
        data-completed="false"
        data-testid="workflow-step-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
        >
          2
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-primary"
        >
          Ensemble
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-muted"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="false"
      data-testid="progress-step-prompt"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="false"
        data-testid="workflow-step-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
        >
          3
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-muted-foreground"
        >
          Prompt
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-muted"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="false"
      data-testid="progress-step-review"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="false"
        data-testid="workflow-step-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
        >
          4
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-muted-foreground"
        >
          Review
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps > snapshots > matches snapshot for prompt step 1`] = `
<div
  class="progress-steps flex items-center justify-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="true"
      data-testid="progress-step-config"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="true"
        data-testid="workflow-step-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-success"
        >
          Config
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-success"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="true"
      data-testid="progress-step-ensemble"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="true"
        data-testid="workflow-step-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-success"
        >
          Ensemble
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-success"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="true"
      data-completed="false"
      data-testid="progress-step-prompt"
    >
      <div
        class="flex flex-col items-center"
        data-active="true"
        data-completed="false"
        data-testid="workflow-step-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
        >
          3
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-primary"
        >
          Prompt
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-muted"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="false"
      data-testid="progress-step-review"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="false"
        data-testid="workflow-step-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-muted text-muted-foreground"
        >
          4
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-muted-foreground"
        >
          Review
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps > snapshots > matches snapshot for review step 1`] = `
<div
  class="progress-steps flex items-center justify-center mb-12"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="true"
      data-testid="progress-step-config"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="true"
        data-testid="workflow-step-config"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-success"
        >
          Config
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-success"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="true"
      data-testid="progress-step-ensemble"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="true"
        data-testid="workflow-step-ensemble"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-success"
        >
          Ensemble
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-success"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="false"
      data-completed="true"
      data-testid="progress-step-prompt"
    >
      <div
        class="flex flex-col items-center"
        data-active="false"
        data-completed="true"
        data-testid="workflow-step-prompt"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-success text-success-foreground"
        >
          <svg
            class="lucide lucide-check w-4 h-4"
            fill="none"
            height="24"
            role="img"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-success"
        >
          Prompt
        </span>
      </div>
    </div>
    <div
      class="w-16 h-0.5 mx-4 transition-colors bg-success"
    />
  </div>
  <div
    class="flex items-center"
  >
    <div
      class="flex flex-col items-center"
      data-active="true"
      data-completed="false"
      data-testid="progress-step-review"
    >
      <div
        class="flex flex-col items-center"
        data-active="true"
        data-completed="false"
        data-testid="workflow-step-review"
      >
        <div
          class="w-12 h-12 rounded-full flex items-center justify-center font-semibold text-sm transition-colors bg-primary text-primary-foreground"
        >
          4
        </div>
        <span
          class="mt-2 text-sm font-medium transition-colors text-primary"
        >
          Review
        </span>
      </div>
    </div>
  </div>
</div>
`;
